# swagger.yaml
@@ -118,7 +118,6 @@ paths:
             application/json:
               schema: 
                 $ref: '#/components/schemas/InternalServerErrorResponse'        
-          
     delete:
       tags:
         - todos
@@ -163,14 +162,13 @@ components:
           type: string
         content:
           type: string
-        created_timestamp:
-          type: integer
-          format: int64
+        created_at:
+          type: string
       example: 
           id: 1
           title: 買い物
           content: Air Pods Proを買いに行く
-          created_timestamp: 1573655151
+          created_at: "2019-11-14T15:04:25Z"
     TodoRequest:
       type: object
       required:
